# MiniModelBot

./: .gitignore  CMakeLists.txt  CNN.ipynb  README.md  RUGD.ipynb  ai4Mars.ipynb  epic.py  headedModel.tflite  headlessModel.tflite  imageNet.ipynb  indoor (1).ipynb  indoor (2).ipynb  indoor.ipynb  my_first_cnn.ipynb  nature.ipynb  runModelRequest.ipynb  sdkconfig  tinyvgg_terrain_quantized_2.tflite  tinyvgg_terrain_quantized_int8_headless.tflite  tinyvgg_terrain_quantized_int8_w_head.tflite  tinyvgg_terrain_quantized_uint8_3.tflite  tinyvgg_terrain_quantized_uint8_headless.tflite  tinyvgg_terrain_quantized_uint8_w_head.tflite
code_for_robot/: CMakeLists.txt
code_for_robot/main/: CMakeLists.txt  model_data.cc
code_for_robot/main/headers/: bceLoss.h  modelData.h
code_for_robot/main/src/: model.cpp
components/esp-tflite-micro/: README.md
hello_world/: convert_to_c.py  script.py  script2.py
hello_world/hello_world2/: model2_quantized.tflite  pytest_hello_world.py
hello_world/hello_world3/: script.py
hello_world/main/: hello_world_main.c  model_weights.cpp  model_weights.h  websocket.cpp  websocket.h
main/: CMakeLists.txt  headless_model.h  headless_model_data.h  idf_component.yml  main.cpp  mainModel.cpp  mainMotorIMU.cpp  model_data.h
main/include/: PrintFunctions.h  camera.h  custom_layer.h  headless_model.h  imu.h  littleFS.h  model.h  model_data.h  motors.h  my_littlefs.h
main/src/: PrintFunctions.cpp  camera.cpp  custom_layer.cpp  imu.cpp  littleFS.cpp  model.cpp  motors.cpp  my_littlefs.cpp
yea/hello_world/: script.py
(+7 files in other folders)
